# jellyengine

./:  - Copy.gitignore  .gitignore  CMakeLists.txt  CppProperties.json  LICENSE  LICENSE.txt  README.md  build.bat  programming-guidelines.md  sampletest.c
Engine/: CMakeLists.txt  build.bat
Engine/libraries/assimp/test/models/IRR/: instancing.irr
Engine/libraries/glad/: CMakeLists.txt
Engine/libraries/glad/include/glad/: glad.h
Engine/libraries/glad/src/: glad.c
Engine/src/: JellyEngine.cpp  JellyEngine.h  camera.cpp  camera.h  gameObject.cpp  gameObject.h  input.cpp  input.h  mesh.cpp  mesh.h  model.cpp  model.h  physics.cpp  physics.h  renderer.cpp  renderer.h  shader.cpp  shader.h
Game/: CMakeLists.txt  build.bat
Game/resources/3D/: Credits.txt
Game/resources/shaders/: shader.frag  shader.vert
Game/src/: game.cpp  game.h
JellyEngine/: CMakeLists.txt  JellyEngine.cpp  JellyEngine.h
JellyEngine/include/: camera.h  gameObject.h  mesh.h  model.h  physics.h  renderer.h  shader.h  spring.h
JellyEngine/libraries/glad/include/glad/: glad.h
JellyEngine/libraries/glad/src/: glad.c
JellyEngine/resources/: example.txt
JellyEngine/resources/3D/: Credits.txt  gummybear.fbx
JellyEngine/resources/shaders/: shader.frag  shader.vert
JellyEngine/src/: camera.cpp  gameObject.cpp  mesh.cpp  model.cpp  physics.cpp  renderer.cpp  shader.cpp  spring.cpp
Logo/: Logo.ai
